--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
-    "sharp": "^0.33.5"
+    "sharp": "^0.33.5",
+    "streamifier": "^0.1.1"
   }
 }
